welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:2: error: reassignment to val
  if (isMorning=true){
               ^answerCell:5: error: reassignment to val
  if(isMom=true){
          ^answerCell:8: error: reassignment to val
  if(isAsleep=true){
             ^answerCell:8: error: type mismatch;
 found   : Unit
 required: Boolean
  if(isAsleep=true){
  ^